--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/jquery-2.1.0.js")
+    @Styles.Render("~/Styles/client_style.css")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
