--- a/backend/Views/Home/Index.cshtml
+++ b/backend/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-    <header id="t_header_general" role="banner" class="noprint">
+    @*<header id="t_header_general" role="banner" class="noprint">
         <div class="section">
             <h1 id="logo" class="t_compartment"><a href="/" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
             <nav id="nav_core" class="t_compartment" role="navigation">
@@ -55,8 +55,7 @@
             </nav>
 
         </div>
-    </header>
-    <pre id="preOutput"></pre>
+    </header>*@
 
     <table id="tblChoice">
         <tr>
