--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -10,25 +10,52 @@
     @Styles.Render("~/Styles/client_style.css")
 </head>
 <body>
+    @*<header id="t_header_general" role="banner" class="noprint">
+        <div class="section">
+            <h1 id="logo" class="t_compartment"><a href="/" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
+            <nav id="nav_core" class="t_compartment" role="navigation">
+                <h2 class="ally">Site Navigation</h2><ul id="nav_core_loaded">
+                    <li id="options" class="navcore_tab" tabindex="0">
+                        <h3><span></span></h3>
+                        <a href="/Admin/Index.chtml" class="navcore_overview">Overview</a>
+                    </li>
+
+                    <li id="terms" class="navcore_tab" tabindex="0">
+                        <h3><span></span></h3>
+                        <a href="/study/" class="navcore_overview">Overview</a>
+                    </li>
+                    <li id="choice" class="navcore_tab" tabindex="0">
+                        <h3><span></span></h3>
+                        <a href="/study/" class="navcore_overview">Overview</a>
+                    </li>
+
+                </ul>
+            </nav>
+
+        </div>
+    </header>*@
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <h1 id="logo" class="t_compartment"><a href="/" style="margin-left:180px;" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
+        <div class="container" style="padding-left:250px;">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Option Selection", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li id="choice" class="navcore_tab">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    <li id="choice" class="navcore_tab">@Html.ActionLink("Choices", "Index", "ChoiceAdmin", new { area = "" }, null)</li>
+                    <li id="choice" class="navcore_tab">@Html.ActionLink("Options", "Index", "OptionAdmin", new { area = "" }, null)</li>
+                    <li id="choice" class="navcore_tab">@Html.ActionLink("Terms", "Index", "TermAdmin", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="padding-top:150px;">
         @RenderBody()
         <hr />
         <footer>
