--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         </div>
     </header>*@
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <h1 id="logo" class="t_compartment"><a href="/" style="margin-left:180px;" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
+        <h1 id="logo" class="t_compartment"><a href="/" style="margin-left:10%;" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
         <div class="container" style="padding-left:250px;">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Option Selection", "Index", "Home", null, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("Option Selection", "Index", "Home", null, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
