--- a/backend/Views/Home/Index.cshtml
+++ b/backend/Views/Home/Index.cshtml
@@ -1,34 +1,8 @@
-﻿@*<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>*@
-
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    
+
     <script src="~/Scripts/jquery-2.1.0.js"></script>
     <script src="~/Scripts/toastr.js"></script>
     <link href="~/Content/toastr.css" rel="stylesheet" />
@@ -97,7 +71,7 @@
                 <td><select id="selFourthChoice"></select></td>
             </tr>
         </table>
-        <button id="btnSubmit">Submit</button>
+        <button id="btnSubmit" type="button">Submit</button>
     </form>
     <script>
         $(document).ready(function () {
@@ -108,18 +82,6 @@
 
 
         });
-        //        $(function () {
-
-
-        //var getOptions = function () {
-        //    $.get(optionUrl).always(showResponse);
-        //    return false;
-        //};
-
-        //var getTerms = function () {
-        //    $.get(termUrl).always(showResponse);
-        //    return false;
-        //};
 
         function getChoices() {
             clearResult();
@@ -131,10 +93,6 @@
         var clearResult = function () {
             $("#preOutput").text("");
         }
-
-        //var showResponse = function (object) {
-        //    $("#preOutput").text(JSON.stringify(object, null,4));
-        //};
 
         var url = "http://" + document.location.host + "/api/";
         var termUrl = url + "Term";
@@ -169,11 +127,8 @@
 
         }
 
-
         $("#btnSubmit").click(Save);
         window.onload = getChoices;
-        //}
-        //);
         function Save() {
             jQuery.support.cors = true;
             var choice = {
@@ -197,11 +152,10 @@
                     $('#myForm').trigger("reset");
                 },
                 error: function (x, y, z) {
-                    toastr.error('Something went wrong.','Please try again.');
+                    toastr.error('Something went wrong.', 'Please try again.');
                 }
             });
         }
-
     </script>
 </body>
 </html>
