--- a/backend/Views/Home/Index.cshtml
+++ b/backend/Views/Home/Index.cshtml
@@ -1,78 +1,51 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
 
-    <script src="~/Scripts/jquery-2.1.0.js"></script>
-    <script src="~/Scripts/toastr.js"></script>
-    <link href="~/Content/toastr.css" rel="stylesheet" />
-</head>
+
 <body>
 
-    <header id="t_header_general" role="banner" class="noprint">
-        <div class="section">
-            <h1 id="logo" class="t_compartment"><a href="/" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
-            <nav id="nav_core" class="t_compartment" role="navigation">
-                <h2 class="ally">Site Navigation</h2><ul id="nav_core_loaded">
-                    <li id="options" class="navcore_tab" tabindex="0">
-                        <h3><span></span></h3>
-                        <a href="/Admin/Index.chtml" class="navcore_overview">Overview</a>
-                    </li>
-
-                    <li id="terms" class="navcore_tab" tabindex="0">
-                        <h3><span></span></h3>
-                        <a href="/study/" class="navcore_overview">Overview</a>
-                    </li>
-                    <li id="choice" class="navcore_tab" tabindex="0">
-                        <h3><span></span></h3>
-                        <a href="/study/" class="navcore_overview">Overview</a>
-                    </li>
-
-                </ul>
-            </nav>
-
-        </div>
-    </header>
-    <pre id="preOutput"></pre>
-    <form id="myForm" action="#">
+   <div class="col-lg-3"></div>
+    <form class="col-lg-6" id="myForm" action="#">
 
 
         <table id="tblChoice">
             <tr>
-                <td>Student Number</td>
-                <td><input id="txtStudentNumber" /></td>
+                <td class="col-lg-6">Student Number</td>
+                <td class="col-lg-6"><input id="txtStudentNumber" /></td>
             </tr>
             <tr>
-                <td>First Name</td>
-                <td><input id="txtFirstName" /></td>
+                <td class="col-lg-6">First Name</td>
+                <td class="col-lg-6"><input id="txtFirstName" /></td>
             </tr>
             <tr>
-                <td>Last Name</td>
-                <td><input id="txtLastName" /></td>
+                <td class="col-lg-6">Last Name</td>
+                <td class="col-lg-6"><input id="txtLastName" /></td>
             </tr>
             <tr>
-                <td>Term</td>
-                <td id="txtTermId"></td>
+                <td class="col-lg-6">Term</td>
+                <td class="col-lg-6" id="txtTermId"></td>
             </tr>
             <tr>
-                <td>First Choice</td>
-                <td><select id="selFirstChoice"></select></td>
+                <td class="col-lg-6">First Choice</td>
+                <td class="col-lg-6"><select id="selFirstChoice"></select></td>
             </tr>
             <tr>
-                <td>Second Choice</td>
-                <td><select id="selSecondChoice"></select></td>
+                <td class="col-lg-6">Second Choice</td>
+                <td class="col-lg-6"><select id="selSecondChoice"></select></td>
             </tr>
             <tr>
-                <td>Third Choice</td>
-                <td><select id="selThirdChoice"></select></td>
+                <td class="col-lg-6">Third Choice</td>
+                <td class="col-lg-6"><select id="selThirdChoice"></select></td>
             </tr>
             <tr>
-                <td>Fourth Choice</td>
-                <td><select id="selFourthChoice"></select></td>
+                <td class="col-lg-6">Fourth Choice</td>
+                <td class="col-lg-6"><select id="selFourthChoice"></select></td>
             </tr>
         </table>
+        <br />
         <button id="btnSubmit" type="button">Submit</button>
     </form>
+    <div class="col-lg-3"></div>
     <script>
         $(document).ready(function () {
             $('#selFirstChoice').append($('<option/>').text("Select Choice #1"));
