--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
     </div>
     <div class="container body-content" style="padding-top:150px;">
         @RenderBody()
+        <div style="clear:both;"></div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
