--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -4,36 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/client_style.css")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/jquery-2.1.0.js")
-    @Styles.Render("~/Styles/client_style.css")
 </head>
 <body>
-    @*<header id="t_header_general" role="banner" class="noprint">
-        <div class="section">
-            <h1 id="logo" class="t_compartment"><a href="/" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
-            <nav id="nav_core" class="t_compartment" role="navigation">
-                <h2 class="ally">Site Navigation</h2><ul id="nav_core_loaded">
-                    <li id="options" class="navcore_tab" tabindex="0">
-                        <h3><span></span></h3>
-                        <a href="/Admin/Index.chtml" class="navcore_overview">Overview</a>
-                    </li>
-
-                    <li id="terms" class="navcore_tab" tabindex="0">
-                        <h3><span></span></h3>
-                        <a href="/study/" class="navcore_overview">Overview</a>
-                    </li>
-                    <li id="choice" class="navcore_tab" tabindex="0">
-                        <h3><span></span></h3>
-                        <a href="/study/" class="navcore_overview">Overview</a>
-                    </li>
-
-                </ul>
-            </nav>
-
-        </div>
-    </header>*@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <h1 id="logo" class="t_compartment"><a href="/" style="margin-left:10%;" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
         <div class="container" style="padding-left:250px;">
@@ -43,7 +19,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("Option Selection", "Index", "Home", null, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
