add readme and hide logo on xs view

--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <h1 id="logo" class="t_compartment"><a href="/" style="margin-left:10%;" class="nav_bcit"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
+        <h1 id="logo" class="t_compartment"><a href="/" style="margin-left:10%;" class="nav_bcit hidden-xs"><abbr title="British Columbia Institute of Technology">BCIT</abbr></a></h1>
         <div class="container" style="padding-left:250px;">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
