--- a/backend/Views/Shared/_Layout.cshtml
+++ b/backend/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/jquery-2.1.0.js")
-
+    @Scripts.Render("~/Scripts/toastr.js")
+    @Styles.Render("~/Content/toastr.css")
     <style type="text/css">
 
         @@media(min-width:768px){
